[project]
name = "markdown-server"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jiuh.star", email = "jiuh.star@gmail.com" }
]
dependencies = [
    "markdown>=3.6",
    "quart>=0.19.4",
    "watchfiles>=0.21.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=8.22.2",
]
[tool.rye.scripts]
dev = "quart --debug run -h 0.0.0.0"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/markdown_server"]
